--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Diagram</title>
 </head>
 <body>
-
+    <header>
+        <nav>
+            <div class="hamburger">
+                <div class="first-line"></div>
+                <div class="last-line"></div>
+            </div>
+        </nav>
+        <section id="head">
+            <div>
+                <h1>We are <span class="logo">Diagram</span></h1>
+                <p>The agency for the future</p>
+                <a href="#" class="btn btn-primary">Begin a project</a>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
