--- a/index.html
+++ b/index.html
@@ -4,24 +4,147 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
     <title>Diagram</title>
 </head>
 <body>
     <header>
         <nav>
-            <div class="hamburger">
-                <div class="first-line"></div>
-                <div class="last-line"></div>
+            <div class="logo"><i class="fa fa-square-o" aria-hidden="true"></i> Diagram</div>
+            <div class="menu-wrap">
+                <input type="checkbox" name="check" class="toggler">
+                <div class="lines">
+                    <div class="first-line"></div>
+                    <div class="last-line"></div>
+                </div>
+                <div class="nav-links">
+                    <div>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">About Us</a></li>
+                            <li><a href="index.html">Contact Us</a></li>
+                            <li><a href="index.html">Our Services</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </nav>
-        <section id="head">
+        <div id="head">
             <div>
                 <h1>We are <span class="logo">Diagram</span></h1>
-                <p>The agency for the future</p>
-                <a href="#" class="btn btn-primary">Begin a project</a>
+                <div>
+                    <p>The agency for the future</p>
+                    <a href="#" class="btn btn-primary">Begin a project</a>
+                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </div>
             </div>
-        </section>
+        </div>
     </header>
+
+    <section id="section1" data-aos="fade-left">
+        <div class="section1">
+            <div class="box box1"></div>
+            <div class="box box2">
+                <h1>Systemic Branding</h1>
+                <p>
+                    Diagram is a design, development and innovation strategy agency
+                    Our team of developers and design specialists help leading companies 
+                    and organizations build amazing products. We help ambitious leaders 
+                    build iconic brands through informed designers.
+                </p>
+                <hr>
+                <div>
+                    <span class="logo">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="section2" data-aos="fade-right">
+        <h2>Clients</h2>
+        <div class="section2">
+            <div>
+                <img src="./assets/graphics/SPLASH 105.5FM.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/Calsberg.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/POLARIS.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/MICK FINANCE.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/HUNTSMAN.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/SONY.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/Blondie.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/AIR 45.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/ticketmaster.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/BMG.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/Budweiser.svg.svg" alt="graphic">
+            </div>
+            <div>
+                <img src="./assets/graphics/infinix.svg.svg" alt="graphic">
+            </div>
+        </div>
+    </section>
+
+    <div id="alphabets" data-aos="fade-left">
+        <p>Real People.</p>
+        <p>Real Stories.</p>
+    </div>
+
+    <section id="section3" data-aos="fade-left">
+        <div class="section3">
+            <span class="logo">
+                <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                <i class="fa fa-chevron-right" aria-hidden="true"></i>
+            </span>
+            <div class="box1">
+                <img src="./assets/matheus-ferrero-233592-unsplash.jpg" alt="face">
+            </div>
+            <div class="box2">
+                <p>They truly care about their clients and it shows in their 
+                    customer service. I appreciate the patience they have to solve any issue.
+                    I'd recommend them in a heartbeat. They've been awesome.
+                </p>
+                <p class="p">Taylor Esther</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="section4" data-aos="fade-right">
+        <div class="section4">
+            <div>
+                <p>Ready to start a project?</p>
+                <p class="p">Let's Work Together</p>
+            </div>
+            <div class="btn btn-primary">Contact Us</div>
+        </div>
+    </section>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 100,
+            duration: 1000
+        });
+    </script>
 </body>
 </html>
