--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="index.html">About Us</a></li>
                             <li><a href="index.html">Contact Us</a></li>
-                            <li><a href="./services/services.html">Our Services</a></li>
+                            <li><a href="index.html">Our Services</a></li>
                         </ul>
                     </div>
                 </div>
@@ -37,11 +37,6 @@
                 <div>
                     <p>The agency for the future</p>
                     <a href="#" class="btn btn-primary">Begin a project</a>
-<<<<<<< HEAD
-=======
-                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
->>>>>>> c3cc99a5ee7bb176a433ad949601202d6a694a3e
                 </div>
             </div>
         </div>
@@ -114,7 +109,6 @@
     </div>
 
     <section id="section3" data-aos="fade-left">
-<<<<<<< HEAD
         <div class="slider">
             <div class="section3 active">
                 <div class="box1">
@@ -172,24 +166,6 @@
             <i class="fa fa-chevron-left" onclick="changeSlide('previous')" aria-hidden="true"></i>
             <i class="fa fa-chevron-right" onclick="changeSlide('next')" aria-hidden="true"></i>
         </span>
-=======
-        <div class="section3">
-            <span class="logo">
-                <i class="fa fa-chevron-left" aria-hidden="true"></i>
-                <i class="fa fa-chevron-right" aria-hidden="true"></i>
-            </span>
-            <div class="box1">
-                <img src="./assets/matheus-ferrero-233592-unsplash.jpg" alt="face">
-            </div>
-            <div class="box2">
-                <p>They truly care about their clients and it shows in their 
-                    customer service. I appreciate the patience they have to solve any issue.
-                    I'd recommend them in a heartbeat. They've been awesome.
-                </p>
-                <p class="p">Taylor Esther</p>
-            </div>
-        </div>
->>>>>>> c3cc99a5ee7bb176a433ad949601202d6a694a3e
     </section>
 
     <section id="section4" data-aos="fade-right">
@@ -202,7 +178,6 @@
         </div>
     </section>
 
-<<<<<<< HEAD
     <script
         src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -210,14 +185,5 @@
     </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./js/index.js"></script>
-=======
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            offset: 100,
-            duration: 1000
-        });
-    </script>
->>>>>>> c3cc99a5ee7bb176a433ad949601202d6a694a3e
 </body>
 </html>
