--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="index.html">About Us</a></li>
                             <li><a href="index.html">Contact Us</a></li>
-                            <li><a href="./services.html">Our Services</a></li>
+                            <li><a href="./services/services.html">Our Services</a></li>
                         </ul>
                     </div>
                 </div>
