--- a/contact/contact.html
+++ b/contact/contact.html
@@ -27,9 +27,9 @@
                     <div class="list-items-wrapper">
                         <ul class="list-items">
                             <li class="item"><a href="../index.html">Home</a></li>
-                            <li class="item"><a href="#">About Us</a></li>
-                            <li class="item"><a href="#">Contact Us</a></li>
-                            <li class="item"><a href="#">Our Services</a></li>
+                            <li class="item"><a href="../about/about.html">About Us</a></li>
+                            <li class="item"><a href="contact.html">Contact Us</a></li>
+                            <li class="item"><a href="../services.html">Our Services</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -105,7 +105,7 @@
 
                     <div class="flex">
                         <ul>    
-                            <li><a href="#">Services</a></li>
+                            <li><a href="../services.html">Services</a></li>
                             <li><a href="#">Career</a></li>
                             <li><a href="#">Privacy Policy</a></li>
                         </ul>    
