--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="index.html">About Us</a></li>
-                            <li><a href="index.html">Contact Us</a></li>
+                            <li><a href="./contact/contact.html">Contact Us</a></li>
                             <li><a href="index.html">Our Services</a></li>
                         </ul>
                     </div>
