--- a/index.html
+++ b/index.html
@@ -177,6 +177,55 @@
             <div class="btn btn-primary">Contact Us</div>
         </div>
     </section>
+    
+        <footer>
+            <div class="footer-contact-wrapper">
+            
+                <div class="footer-logo">
+                    <div>Diagram</div>
+                </div>
+
+                <nav class="footer-contact-nav">
+
+                    <div class="address">
+                        <p class="footer-nav-heading">Address</p>
+                        <address class="adr">10, Adamu Ave,<br> Lagos, Nigeria</address>
+                        <p class="adr"><a href="#">(+234) - 8123456789</a></p>
+                        <p class="adr"><a href="#">info@thediagram.com</a></p>
+                    </div>
+
+                    <div class="site">
+                        <p class="footer-nav-heading">Site</p>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="flex">
+                        <ul>    
+                            <li><a href="../services.html">Services</a></li>
+                            <li><a href="#">Career</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                        </ul>    
+                    </div>
+
+                    <div class="social-icons">
+                        <p class="footer-nav-heading">Social</p>
+                        <img src="./images/facebook.svg" width="24" height="24"/>
+                        <img src="./images/instagram.svg" width="24" height="24"/>
+                        <img src="./images/twitter.svg" width="24" height="24"/>
+                        <img src="./images/icons8-linkedin-48.png" width="27" height="27"/>
+                    </div>
+                </nav>
+
+                <div class="artribute">
+                    <p>The Diagram Agency, 2020</p>
+                </div>
+
+            </div>
+        </footer>
 
     <script
         src="https://code.jquery.com/jquery-3.5.1.min.js"
