--- a/services.html
+++ b/services.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/font.css">
+    <link rel="stylesheet" href="./contact/contact.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/services.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
