--- a/services.html
+++ b/services.html
@@ -148,10 +148,10 @@
 
                     <div class="social-icons">
                         <p class="footer-nav-heading">Social</p>
-                        <img src="./images/facebook.svg" width="24" height="24"/>
-                        <img src="./images/instagram.svg" width="24" height="24"/>
-                        <img src="./images/twitter.svg" width="24" height="24"/>
-                        <img src="./images/icons8-linkedin-48.png" width="27" height="27"/>
+                        <img src="./contact/images/facebook.svg" width="24" height="24"/>
+                        <img src="./contact/images/instagram.svg" width="24" height="24"/>
+                        <img src="./contact/images/twitter.svg" width="24" height="24"/>
+                        <img src="./contact/images/icons8-linkedin-48.png" width="27" height="27"/>
                     </div>
                 </nav>
 
