--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./contact/contact.css">
-    <link rel="stylesheet" href="./css/main.<link rel="stylesheet" href="./contact/contact.css">">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/services.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
     <title>Diagram Agency</title>
